2001-06-01  Frank Warmerdam  <warmerdam@pobox.com>

	* makefile.vc: emess.c directly linked into mainline programs.

	* pj_errno.c: added pj_get_errno_ref().

2001-05-14  Frank Warmerdam  <warmerdam@pobox.com>

	* upraded config.sub and config.guess as per debian bug report 97374.

Rel. 4.4.3 2001/04/20
-------------------------------------------------------------------------
	
2001-04-20  Frank Warmerdam  <warmerdam@pobox.com>

	* Don't install test files in /usr/local/share/proj.

	* Made WGS84 the default in proj_def.dat

	* nad/test27,test83: Use -b flag for diff to avoid differences on
	Windows due to CR/LF issues.

	* src/makefile.vc: default to building "all".

	* src/pj_init.c: call pj_open_lib() with mode of "rt" to ensure
	correct handling of def files on DOS based systems.

	* Updated for 4.4.3 release (pj_release.c, Makefile.am, etc).

2001-04-05  Frank Warmerdam  <warmerdam@pobox.com>

	* Introduce proj_api.h as a public include file with projects.h
	now intended to be private.

	* pj_datums.c: added ntv1_can.dat to list for NAD27 datum.

	* nad_init(): added support for loading NTv1 style datum shift files.

	* cs2cs.c: use pj_latlong_from_proj()

	* pj_init.c: added pj_init_plus().

	* pj_utils.c: new with pj_is_latlong(), and pj_latlong_from_proj()
	functions.

	* pj_strerror.c: added error -43.

2001-04-04  Frank Warmerdam  <warmerdam@pobox.com>

	* rewrote 7 param datum shift to match EPSG:9606, now works with 
	example.

2001-03-20  Frank Warmerdam  <warmerdam@pobox.com>

	* Added -DPROJ_LIB=\"C:/PROJ/\" in src/makefile.vc to provide for
	a default proj data file search directory.

	* Added HOWTO-RELEASE document in CVS.

2001-03-15  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_apply_gridshift.c: fixed bug in pj_load_nadgrids() which
	would sometimes result in the load function failing because of a
	buffer overrun in the grid list string.

2001-03-14  Frank Warmerdam  <warmerdam@pobox.com>
